# mcp-wsl

./: .prettierrc  Cargo.toml  README.md  test_server.py
.github/workflows/: ci.yml  release.yml
packaging/aur/mcp-wsl/: .SRCINFO  PKGBUILD
packaging/aur/mcp-wsl-bin/: .SRCINFO  PKGBUILD
src/: http.rs  main.rs  server.rs
src/tools/: config.rs  env.rs  exec.rs  files.rs  mod.rs  mounts.rs  packages.rs  procs.rs  shells.rs  system.rs
