[package]
name = "mcp-wsl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mcp-wsl"
path = "src/main.rs"

[dependencies]
libc = "0.2"
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
glob = "0.3"
sysinfo = "0.33"
chrono = "0.4"
hex = "0.4"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
